--- a/portFolio.html
+++ b/portFolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full Stack Developer Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="portFolio.css">
+    <link rel="stylesheet" href="./portFolio.css">
 </head>
 <body>
     <header>
@@ -75,12 +75,23 @@
             <p>Here are some of the projects I have worked on during my Full Stack Development course:</p>
             <ul>
                 <li>
-                    <h4>Project 1: Task Manager App</h4>
-                    <p>A web-based task management application built using React, Node.js, and MongoDB. Users can create, update, and delete tasks. Implemented JWT-based authentication for secure login.</p>
+                    <h4>Project 1: E-Learning Platform</h4>
+                    <p>A web-based Learning page, built using React Router DOM . Users can find the preferred course and also get the insights and more info about that course.</p><a href="https://polite-jelly-64e21e.netlify.app/Career" target="_blank">Courses Web Page</a>
+                    
                 </li>
                 <li>
-                    <h4>Project 2: E-commerce Website</h4>
-                    <p>An online shopping platform where users can browse products, add them to a cart, and proceed with checkout. The website is built using the MERN stack and features user authentication and a dynamic product catalog.</p>
+                    <h4>Project 2: Task Manager App</h4>
+                    <p>A web-based task management application built using React, Node.js, and JWT-based Authentication,MongoDB and Multer for File Upload . Users can create, update, and delete tasks. Implemented JWT-based authentication for secure login.</p><a href="https://petadoptionguvi.netlify.app/" target="_blank">PetAdoption Application</a>
+                    
+                </li>
+                <li>
+                    <h4>Project 3: API Promise Task</h4>
+                    <p> Using Fetch Function, HTML, Css, JavaScript and BootStrap to create a Interactive UIs .</p><a href="https://celadon-gumption-326d9a.netlify.app/" target="_blank">API Fetch</a>
+                    <a href="https://golden-cranachan-90f499.netlify.app/" target="_blank">ISRO API</a>
+                </li>
+                <li>
+                    <h4>Project 4: E-commerce Website</h4>
+                    <p>An online shopping platform where users can browse products, add them to a cart, and proceed with checkout. The website is built using the MERN stack and features a dynamic product catalog.</p> <a href="https://boisterous-jelly-895d89.netlify.app/" target="_blank"> AddtoCart Page</a>
                 </li>
             </ul>
         </div>
@@ -91,43 +102,43 @@
             <div class="certificates-gallery">
                 <!-- Certificate 1 -->
                 <div class="certificate">
-                    <a href="Images/Krishnaraj - Javascript.png" target="_blank">
-                        <img src="Images/Krishnaraj - Javascript.png" alt="JavaScript"
+                    <a href="./Images/Krishnaraj - Javascript.png" target="_blank">
+                        <img src="./Images/Krishnaraj - Javascript.png" alt="JavaScript"
                     </a>
                 </div>
                 <div class="certificate">
-                    <a href="Images/Krishnaraj - HTML.png" target="_blank">
-                        <img src="Images/Krishnaraj - HTML.png" alt="Certificate 2">
+                    <a href="./Images/Krishnaraj - HTML.png" target="_blank">
+                        <img src="./Images/Krishnaraj - HTML.png" alt="HTML">
                     </a>
                 </div>
                 <div class="certificate">
-                    <a href="Images/Krishnaraj - BootStrap.png" target="_blank">
-                        <img src="Images/Krishnaraj - BootStrap.png" alt="Certificate 3">
+                    <a href="./Images/Krishnaraj - BootStrap.png" target="_blank">
+                        <img src="./Images/Krishnaraj - BootStrap.png" alt="BootStrap">
                     </a>
                 </div>
                 <div class="certificate">
-                    <a href="Images/Krishnaraj - React.png" target="_blank">
-                        <img src="Images/Krishnaraj - React.png" alt="Certificate 3">
+                    <a href="./Images/Krishnaraj - React.png" target="_blank">
+                        <img src="./Images/Krishnaraj - React.png" alt="React">
                     </a>
                 </div>
                 <div class="certificate">
-                    <a href="Images/Krishnaraj - NodeJs.png" target="_blank">
-                        <img src="Images/Krishnaraj - NodeJs.png" alt="Certificate 3">
+                    <a href="./Images/Krishnaraj - NodeJs.png" target="_blank">
+                        <img src="./Images/Krishnaraj - NodeJs.png" alt="NodeJS">
                     </a>
                 </div>
                 <div class="certificate">
-                    <a href="Images/Krishnaraj - MongoDB.png" target="_blank">
-                        <img src="Images/Krishnaraj - MongoDB.png" alt="Certificate 3">
+                    <a href="./Images/Krishnaraj - MongoDB.png" target="_blank">
+                        <img src="./Images/Krishnaraj - MongoDB.png" alt="MongoDB">
                     </a>
                 </div>
                 <div class="certificate">
-                    <a href="Images/Krishnaraj - MySQL.png" target="_blank">
-                        <img src="Images/Krishnaraj - MySQL.png" alt="Certificate 3">
+                    <a href="./Images/Krishnaraj - MySQL.png" target="_blank">
+                        <img src="./Images/Krishnaraj - MySQL.png" alt="MYSQL">
                     </a>
                 </div>
                 <div class="certificate">
-                    <a href="Images/Krishnaraj - Full Stack Development.png" target="_blank">
-                        <img src="Images/Krishnaraj - Full Stack Development.png" alt="Certificate 3">
+                    <a href="./Images/Krishnaraj - Full Stack Development.png" target="_blank">
+                        <img src="./Images/Krishnaraj - Full Stack Development.png" alt="Full Stack Development">
                     </a>
                 </div>
             </div>
