--- a/portFolio.html
+++ b/portFolio.html
@@ -103,7 +103,7 @@
                 <!-- Certificate 1 -->
                 <div class="certificate">
                     <a href="./Images/Krishnaraj - Javascript.png" target="_blank">
-                        <img src="./Images/Krishnaraj - Javascript.png" alt="JavaScript"
+                        <img src="./Images/Krishnaraj - Javascript.png" alt="JavaScript">
                     </a>
                 </div>
                 <div class="certificate">
