--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full Stack Developer Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./portFolio.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -100,7 +100,7 @@
         <div class="container">
             <h2>My Certificates</h2>
             <div class="certificates-gallery">
-                <!-- Certificate 1 -->
+                
                 <div class="certificate">
                     <a href="./Images/Krishnaraj - Javascript.png" target="_blank">
                         <img src="./Images/Krishnaraj - Javascript.png" alt="JavaScript">
