--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <header>
         <div class="container">
-            <h1>Full Stack Developer Portfolio</h1>
+            <div class="title">
+                <h1>Krishnaraj N</h1>
+                <p>Full Stack Developer(MERN)</p>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
