--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <ul>
                 <li>
                     <h4>Project 1: E-Learning Platform</h4>
-                    <p>A web-based Learning page, built using React Router DOM . Users can find the preferred course and also get the insights and more info about that course.</p><a href="https://polite-jelly-64e21e.netlify.app/Career" target="_blank">Courses Web Page</a>
+                    <p>A web-based Learning page, built using React Router DOM . Users can find the preferred course and also get the insights and more info about that course.</p><a href="https://polite-jelly-64e21e.netlify.app" target="_blank">Courses Web Page</a>
                     
                 </li>
                 <li>
