--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <a href="https://golden-cranachan-90f499.netlify.app/" target="_blank"><button>GitHub Page</button></a>
                 </li>
                 <li>
-                    <h4>Project 2: Pet Adoption App</h4>
+                    <h4>Project 2: Pet Adoption App - Full Stack Project</h4>
                     <p>A web-based task management application built using React, Node.js, and JWT-based Authentication,MongoDB and Multer for File Upload . Users can create, update, and delete tasks. Implemented JWT-based authentication for secure login.</p>
                     <h4>Tech Stack</h4>
                     <table>
@@ -108,6 +108,8 @@
                     </table><br>
 
                     <a href="https://petadoptionguvi.netlify.app/" target="_blank"><button>PetAdoption Application</button></a>
+                    <a href="https://github.com/Krish-Anto/Auction-Backend" target="_blank"><button>Git - Application BackEnd</button></a>
+                    <a href="https://github.com/Krish-Anto/Auction-Frontend/tree/main" target="_blank"><button>Git - Application FrontEnd</button></a>
 
                 </li>
                 <li>
