--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </table><br>
 
                     <a href="https://polite-jelly-64e21e.netlify.app" target="_blank"><button>Navigation Page</button></a>
-                    <a href="https://golden-cranachan-90f499.netlify.app/" target="_blank"><button>GitHub Page</button></a>
+                    <a href="https://github.com/Krish-Anto/reactroutertask" target="_blank"><button>GitHub Page</button></a>
                 </li>
                 <li>
                     <h4>Project 2: Pet Adoption App - Full Stack Project</h4>
