--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                     </table><br> 
                     <a href="https://celadon-gumption-326d9a.netlify.app/" target="_blank"><button>API Fetch</button></a>
                     <a href="https://golden-cranachan-90f499.netlify.app/" target="_blank"><button>ISRO API</button></a>
+                    <a href="https://github.com/Krish-Anto/PromiseTask1/tree/main" target="_blank"><button>Git Page</button></a>
                 </li>
                 <li>
                     <h4>Project 4: EndPoint Creation</h4>
