--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
             <p>&copy; 2025 Krishnaraj Full Stack Developer Portfolio | All Rights Reserved</p>
         </div>
     </footer>
-    <!-- <script src="js/script.js" defer></script> -->
+    
     <script>
         function openResume() {
          
-          const resumeUrl = './public/Krishnaraj.pdf'; 
+          const resumeUrl = './public/Krishnaraj-N Resume.pdf'; 
           window.open(resumeUrl, '_blank');  
         }
       </script>
