--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <script>
         function openResume() {
          
-          const resumeUrl = './public/Krishnaraj-N Resume.pdf'; 
+          const resumeUrl = './public/Krishnaraj Resume.pdf'; 
           window.open(resumeUrl, '_blank');  
         }
       </script>
